--- a/ciet_pmu/login/templates/login/login.html
+++ b/ciet_pmu/login/templates/login/login.html
@@ -42,7 +42,7 @@
           {% endif %}
           
       </form>
-      <p class="mt-4 text-center text-sm text-gray-600">Don't have an account? <a href="/signup" class="text-purple-700 hover:text-purple-900 font-medium">Signup here</a></p>
+      {% comment %} <p class="mt-4 text-center text-sm text-gray-600">Don't have an account? <a href="/signup" class="text-purple-700 hover:text-purple-900 font-medium">Signup here</a></p> {% endcomment %}
     </div>
   </div>
 </body>
