--- a/ciet_pmu/templates/home/home.html
+++ b/ciet_pmu/templates/home/home.html
@@ -44,7 +44,7 @@
       <div class="w-1/2 animate-fadeInUp">
         <h1 class="text-5xl font-extrabold text-gray-900 mb-6 leading-tight transition-all duration-500 hover:text-indigo-700">CIET PMU</h1>
         <p class="text-lg text-gray-700 mb-8 leading-relaxed max-w-md">The CIET PMU portal ensures effective monitoring, progress updates, and quick retrieval of essential information for PAC/PAB-approved projects under NCERT's Constituent Units.</p>
-        <a href="{% url 'signup' %}" class="bg-indigo-600 text-white px-8 py-3 rounded-lg font-medium hover:bg-indigo-700 transition-all duration-300 transform hover:scale-105 inline-block">Get Started</a>
+        {% comment %} <a href="{% url 'signup' %}" class="bg-indigo-600 text-white px-8 py-3 rounded-lg font-medium hover:bg-indigo-700 transition-all duration-300 transform hover:scale-105 inline-block">Get Started</a> {% endcomment %}
       </div>
       <div class="w-1/2 relative animate-scaleIn">
         <img src="{% static 'images/home_page_images/bulding.jpg' %}" alt="CIET Building" class="rounded-xl shadow-2xl transition-transform duration-500 hover:scale-105 object-cover w-full h-[400px]">
@@ -91,7 +91,7 @@
     <div class="container mx-auto px-12 flex items-center justify-between">
       <div class="w-1/2 relative">
         
-        <img src="{% static 'images/home_page_images/payment_transfer.jpg' %}" alt="Payment Transfer" class="relative z-10 w-full h-auto rounded-lg shadow-lg">
+        <img src="{% static 'images/home_page_images/admin_img.png' %}" alt="Payment Transfer" class="relative z-10 w-full h-auto rounded-lg shadow-lg">
       </div>
       <div class="w-1/2 text-left pl-12">
         <p class="text-sm font-semibold text-indigo-500 mb-4">Admin Panel</p>
