--- a/ciet_pmu/templates/partials/navbar.html
+++ b/ciet_pmu/templates/partials/navbar.html
@@ -3,18 +3,21 @@
 
 <nav class="flex items-center justify-between px-8 py-4 bg-white shadow-md sticky top-0 z-50">
     <div class="flex items-center space-x-4">
-      <img src="{% static 'images/home_page_images/ciet-full-logo.jpg' %}" alt="CIET PMU Logo" class="h-14 transition-transform duration-300 hover:scale-110">
-      <span class="text-2xl font-bold text-gray-800">CIET PMU</span>
+        <img src="{% static 'images/home_page_images/ciet-full-logo.jpg' %}" alt="CIET PMU Logo" class="h-14 transition-transform duration-300 hover:scale-110">
+        <span class="text-2xl font-bold text-gray-800">CIET PMU</span>
     </div>
     <div class="space-x-10">
-      <a href="/" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">Home</a>
-      <a href="#" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">Units</a>
-      <a href="#" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">Announcements</a>
-      <a href="#" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">FAQs</a>
+        <a href="/" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">Home</a>
+        <a href="#" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">Units</a>
+        <a href="#" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">Announcements</a>
+        <a href="#" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">FAQs</a>
     </div>
-    <div class="space-x-4">
-      UserName:<h1>{{ request.session.username}}</h1>
-      <a href="{% url 'login' %}" class="text-white bg-indigo-600 hover:bg-indigo-700 px-6 py-2 rounded-full font-medium transition-all duration-300 transform hover:scale-105">Login</a>
-      <a href="{% url 'signup' %}" class="text-indigo-600 border-2 border-indigo-600 hover:bg-indigo-50 px-6 py-2 rounded-full font-medium transition-all duration-300 transform hover:scale-105">Signup</a>
+    <div class="space-x-4 flex items-center">
+        <span class="text-gray-600 text-lg font-medium">User: {{ request.session.username}}</span>
+        {% if not request.session.username and request.path != '/admin_login/' %}
+            <a href="{% url 'login' %}" class="text-white bg-indigo-600 hover:bg-indigo-700 px-6 py-2 rounded-full font-medium transition-all duration-300 transform hover:scale-105">Login</a>
+        {% elif request.path != '/admin_login/'%}
+            <a href="{% url 'logout' %}" class="text-white bg-red-600 hover:bg-red-700 px-6 py-2 rounded-full font-medium transition-all duration-300 transform hover:scale-105">Sign Out</a>
+        {% endif %}
     </div>
-  </nav>
+</nav>
