--- a/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
+++ b/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
@@ -68,14 +68,14 @@
                     <span class="error-message text-red-500 text-sm hidden">Please select a program type</span> {% endcomment %}
 
                     <h2 class="text-xl font-semibold text-gray-800 mb-4">My Assigned Programs</h2>
-            {% if programs %}
+            {% if programs_title %}
                 <div class="space-y-4">
                     {% for program in programs %}
                         <div class="p-4 border rounded-lg bg-gray-50">
-                            <p><strong>Program Type:</strong> {{ program.type }}</p>
-                            <p><strong>Program Title:</strong> {{ program.title }}</p>
-                            <p><strong>Budget:</strong> ₹{{ program.annual_budget.amount }}</p>
-                            <p><strong>Created At:</strong> {{ program.created_at|date:"d M Y" }}</p>
+                            <p><strong>Program Type:</strong> {{ program_type }}</p>
+                            <p><strong>Program Title:</strong> {{ program_title }}</p>
+                            <p><strong>Budget:</strong> ₹{{ program_budget}}</p>
+                            {% comment %} <p><strong>Created At:</strong> {{ program.created_at|date:"d M Y" }}</p> {% endcomment %}
                         </div>
                     {% endfor %}
                 </div>
