--- a/ciet_pmu/templates/partials/admin_sidebar.html
+++ b/ciet_pmu/templates/partials/admin_sidebar.html
@@ -1,16 +1,16 @@
 {% load static %}
 {% load static tailwind_tags %}
 
- <div class="w-[18%] min-w-[200px] bg-gradient-to-b from-indigo-400 to-indigo-900 text-black p-6 shadow-lg">
+ <div class="w-[18%] min-w-[200px] bg-gradient-to-b from-indigo-400 to-indigo-900 text-black p-6 shadow-lg rounded-lg">
       <nav class="space-y-4">
-        <a href="{% url 'admin_dashboard' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-indigo-700 transition-all">
-          <img src="{% static 'images/admin_dashboard_images/dashboard.svg' %}" class="w-5 h-5"> <span class="text-white">Dashboard</span>
+        <a href="{% url 'admin_dashboard' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-100  transition-all">
+          <img src="{% static 'images/admin_dashboard_images/dashboard.svg' %}" class="w-5 h-5"> <span class="text-black">Dashboard</span>
         </a>
-        <a href="{% url 'projects' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-indigo-700 transition-all">
-          <img src="{% static 'images/admin_dashboard_images/projects.svg' %}" class="w-5 h-5"> <span class="text-white">Projects</span>
+        <a href="{% url 'projects' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-100 transition-all">
+          <img src="{% static 'images/admin_dashboard_images/projects.svg' %}" class="w-5 h-5"> <span class="text-black">Projects</span>
         </a>
-        <a href="{% url 'budget' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-indigo-700 transition-all">
-          <img src="{% static 'images/admin_dashboard_images/budget.svg' %}" class="w-5 h-5"> <span class="text-white">Budget</span>
+        <a href="{% url 'budget' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-100 transition-all">
+          <img src="{% static 'images/admin_dashboard_images/budget.svg' %}" class="w-5 h-5"> <span class="text-black">Budget</span>
         </a>
       </nav>
     </div>
