--- a/ciet_pmu/templates/partials/admin_sidebar.html
+++ b/ciet_pmu/templates/partials/admin_sidebar.html
@@ -12,5 +12,8 @@
         <a href="{% url 'budget' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-100 transition-all">
           <img src="{% static 'images/admin_dashboard_images/budget.svg' %}" class="w-5 h-5"> <span class="text-black">Budget</span>
         </a>
+        <a href="{% url 'view_projects' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-100 transition-all">
+          <img src="{% static 'images/admin_dashboard_images/budget.svg' %}" class="w-5 h-5"> <span class="text-black">View Projects</span>
+        </a>
       </nav>
     </div>
